--- a/webs/web-tyb/src/main/resources/templates/car/index.html
+++ b/webs/web-tyb/src/main/resources/templates/car/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>Home</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="" />
 	<!-- css files -->
@@ -11,8 +11,8 @@
 	<link href="/car/css/style.css" rel="stylesheet" type="text/css" media="all"/>
 	<!-- /css files -->
 	<!-- font files -->
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'/>
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'/>
 	<!-- /font files -->
 	<!-- js files -->
 	<script src="/car/js/modernizr.custom.js"></script>
@@ -61,13 +61,13 @@
 	</ol>
 	<div class="carousel-inner" role="listbox">
 		<div class="item active">
-			<img class="first-slide" src="/car/images/banner1.jpg" alt="First slide">
+			<img class="first-slide" src="/car/images/banner1.jpg" alt="First slide"/>
 		</div>
 		<div class="item">
-			<img class="second-slide" src="/car/images/banner2.jpg" alt="Second slide">
+			<img class="second-slide" src="/car/images/banner2.jpg" alt="Second slide"/>
 		</div>
 		<div class="item">
-			<img class="third-slide" src="/car/images/banner3.jpg" alt="Third slide">
+			<img class="third-slide" src="/car/images/banner3.jpg" alt="Third slide"/>
 		</div>
 	</div>
 	<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
@@ -87,7 +87,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-6">
-				<img src="/car/images/about-img.jpg" alt="about" class="img-responsive slideanim">
+				<img src="/car/images/about-img.jpg" alt="about" class="img-responsive slideanim"/>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6">
 				<div class="about-info">
@@ -153,7 +153,7 @@
 					</div><!-- Accordion -->
 				</div>
 				<div class="col-md-6">
-					<img src="/car/images/service-img.jpg" class="img-responsive slideanim" alt="service">
+					<img src="/car/images/service-img.jpg" class="img-responsive slideanim" alt="service"/>
 				</div>
 			</div>
 		</div><!--/ .container -->
@@ -194,14 +194,14 @@
 	<h3 class="text-center slideanim">Our Gallery</h3>
 	<p class="text-center slideanim">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 	<div class="container">
-		<img src="/car/images/gallery-img1.jpg" data-darkbox="/car/images/gallery-img1-1.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim">
-		<img src="/car/images/gallery-img2.jpg" data-darkbox="/car/images/gallery-img2-2.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim">
-		<img src="/car/images/gallery-img3.jpg" data-darkbox="/car/images/gallery-img3-3.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim">
-		<img src="/car/images/gallery-img4.jpg" data-darkbox="/car/images/gallery-img4-4.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim">
-		<img src="/car/images/gallery-img5.jpg" data-darkbox="/car/images/gallery-img5-5.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim">
-		<img src="/car/images/gallery-img6.jpg" data-darkbox="/car/images/gallery-img6-6.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim">
-		<img src="/car/images/gallery-img7.jpg" data-darkbox="/car/images/gallery-img7-7.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim">
-		<img src="/car/images/gallery-img8.jpg" data-darkbox="/car/images/gallery-img8-8.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim">
+		<img src="/car/images/gallery-img1.jpg" data-darkbox="/car/images/gallery-img1-1.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim" />
+		<img src="/car/images/gallery-img2.jpg" data-darkbox="/car/images/gallery-img2-2.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim" />
+		<img src="/car/images/gallery-img3.jpg" data-darkbox="/car/images/gallery-img3-3.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim" />
+		<img src="/car/images/gallery-img4.jpg" data-darkbox="/car/images/gallery-img4-4.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim" />
+		<img src="/car/images/gallery-img5.jpg" data-darkbox="/car/images/gallery-img5-5.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim" />
+		<img src="/car/images/gallery-img6.jpg" data-darkbox="/car/images/gallery-img6-6.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim" />
+		<img src="/car/images/gallery-img7.jpg" data-darkbox="/car/images/gallery-img7-7.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim" />
+		<img src="/car/images/gallery-img8.jpg" data-darkbox="/car/images/gallery-img8-8.jpg" data-darkbox-description="<b>Lorem Ipsum</b><br>Lorem ipsum dolor sit amet" class="img-responsive slideanim" />
 	</div>
 </section>
 <!-- /Gallery Section -->
@@ -213,21 +213,21 @@
 		<div class="row">
 			<div class="col-lg-4 col-md-4">
 				<div class="test">
-					<img src="/car/images/test-img1.png" class="img-responsive slideanim" alt="">
+					<img src="/car/images/test-img1.png" class="img-responsive slideanim" alt=""/>
 					<h4 class="text-center slideanim">Lorem Ipsum</h4>
 					<p class="t1 slideanim">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4">
 				<div class="test">
-					<img src="/car/images/test-img2.png" class="img-responsive slideanim" alt="">
+					<img src="/car/images/test-img2.png" class="img-responsive slideanim" alt=""/>
 					<h4 class="text-center slideanim">Lorem Ipsum</h4>
 					<p class="t1 slideanim">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4">
 				<div class="test">
-					<img src="/car/images/test-img3.png" class="img-responsive slideanim" alt="">
+					<img src="/car/images/test-img3.png" class="img-responsive slideanim" alt=""/>
 					<h4 class="text-center slideanim">Lorem Ipsum</h4>
 					<p class="t1 slideanim">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 				</div>
