--- a/webs/web-tyb/src/main/resources/templates/backstage/index.html
+++ b/webs/web-tyb/src/main/resources/templates/backstage/index.html
@@ -141,6 +141,7 @@ $(function(){
 								<ul>
 									<li><a href="main.html" target="navTab" rel="main">我的主页</a></li>
 									<li><a href="/prize/playerList" target="navTab" rel="w_table">玩家</a></li>
+									<li><a href="/prize/lotteryRecordList" target="navTab" rel="w_table">记录</a></li>
 									<li><a href="demo/row-col.html" target="navTab" rel="row-col">栅格系统(Bootstrap)</a></li>
 									<li><a href="http://www.baidu.com" target="navTab" rel="page1">页面一(外部链接)</a></li>
 									<li><a href="demo/baidu_map_iframe.html" target="navTab" rel="bmap" external="true" title="需要设置external属性为true">地图(external iframe方式)</a></li>
